agregando el debugging

--- a/Proyectos/Redireccion-Request-Session/build.gradle
+++ b/Proyectos/Redireccion-Request-Session/build.gradle
@@ -26,9 +26,13 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
     compile "com.sparkjava:spark-core:2.7.2"
-    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+   // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
 	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.8.0-beta2'
-    // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
+	// https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
 	testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.8.0-beta2'
+	// https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
+	testCompile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.8.0-beta2'
+	
+	
 }
 
