Parcial II Modificado

--- a/Richard/Parcial-II/bin/.gitignore
+++ b/Richard/Parcial-II/bin/.gitignore
@@ -4,8 +4,9 @@
 /formulario.html
 /iconos/
 /images/
+/Servidor.class
 /UsuraioDatos/
 /index.html
 /music.html
 /notfound.html
-/Servidor.class
+/main.html
